İnstagram klone uygulaması bitti sırada geliştirmesi kadlı

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
         android:theme="@style/Theme.KotlinInstagramKloneApp"
         tools:targetApi="31">
         <activity
-            android:name=".UplodActivity"
+            android:name=".view.UplodActivity"
             android:exported="false" />
         <activity
-            android:name=".FeedActivity"
+            android:name=".view.FeedActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
